CHANGES:
0.8.1 -> 0.8.2
- Add unicode mappings for WP5/WP3 charsets, different from WP6
  (Ariya Hidayat, Fridrich Strba, Susan Isiko Strba)
- Add unicode mappings for WP6 Arabic charsets 13 & 14 (Smokey
  Ardisson) 
- Fix conversion of page attributes in documents with headers/footers
  (Fridrich Strba)

0.8.0 -> 0.8.1
- Prevent endless loops while parsing sub-documents (Fridrich Strba)
- Fix conversion of certain belarussian characters (Yury Tarasievich)
- Fix incorrect conversion of text attributes in spans with tabs and
  incorrect conversion of page characteristics in documents with
  headers/footers (Fridrich Strba)
- Build a libwpd-docs rpm package (All)

0.7.x -> 0.8.0
- Initial WordPerfect 3.0-3.5(e) for Mac support (Marc Maurer, Fridrich Strba)
- WP3 and WP5: Conversion of the extended character set, of page 
  margins, page form and orientation, line spacing, paragraph
  justification (Fridrich Strba, Smokey Ardisson)
- WP3: Conversion of text attributes (Fridrich Strba)
- WP6: Respect paragraph and span properties defined in a Table Cell;
  conversion of header row; conversion of table-related single-byte
  functions (Fridrich Strba)
- WP6: Conversion of Tab Set function and of table row height, as well
  as conversion of "font size change" text attributes (bits 0-4)
  (Fridrich Strba)
- WP6: Added conversion of spacing after paragraph and of first
  line indentation done by functions of the paragraph Group
  (Fridrich Strba)
- WP6: Table cell vertical alignment conversion and colour of the
  cell border (Fridrich Strba)
- WP6: Conversion of text columns size (width and gutters) (Fridrich Strba)
- WP6: Improvements in conversion of tabulators (Fridrich Strba)
- WP6: Text highlight conversion (Fridrich Strba)
- WP6: Page form and orientation conversion (Fridrich Strba)
- WP6: Font colour conversion (Fridrich Strba)
- WP6: List handling improvements (Fridrich Strba, William Lachance)
- Remove span parameters from calls to openParagraph and openListElement